main.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --accent-color: #0092ca;
  --accent-light: #c8dee9;
  --primary-dark: #222831;
  --secondary-dark: #393e46;
  --light-color: #eeeeee;
}

body {
  height: 100vh;
  width: 100%;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  background-color: var(--light-color);
}

/* utility class */
.container {
  width: 90%;
  max-width: 1024px;
  margin-inline: auto;
}

.flex {
  display: flex;
  align-items: center;
}

.tag {
  padding: 4px 10px;
  color: var(--secondary-dark);
  background-color: lightgray;
  font-size: 1rem;
  border-radius: 4px;
  font-weight: 500;
  text-transform: capitalize;
}

.hidden{
  display: none;
}

/* reset elements */
i {
  font-size: 1rem;
}

p {
  color: var(--secondary-dark);
  font-size: 1.2rem;
}

h1 {
  color: var(--primary-dark);
  font-size: 3rem;
}

h2 {
  color: var(--primary-dark);
  font-size: 2.5rem;
}

h3 {
  color: var(--primary-dark);
  font-size: 1.4rem;
}

/* header section */

header {
  padding: 1rem 0px;
  height: 10vh;
  font-size: 30px;
  justify-content: space-between;
  border-bottom: 1px solid var(--secondary-dark);
}

.logo-container h3 {
  font-family: cursive, sans-serif;
  color: var(--primary-dark);
}

.logo-container i {
  font-size: 2.5rem;
  color: var(--accent-color);
}

.search-bar {
  border: 1px solid lightgray;
  padding: 10px 10px;
  border-radius: 5px;
  display: none;
}

.search-bar i {
  font-size: 1.2rem;
}

.search-bar input {
  height: 100%;
  width: 100%;
  border: 0;
  outline: 0;
  background: transparent;
  padding: 0px 5px;
  font-size: 1.1rem;
  color: var(--secondary-dark);
}

.search-bar:focus-within {
  border-color: grey;
}

/* main section */
main {
  height: 80vh;
  padding: 20px 0px;
  overflow-y: scroll;
}




/* main section -- all notes */
main .all-notes {
  /* background-color: aqua; */
  width: 100%;
  height: 100%;
}

.all-notes .note-type {
  font-size: 1.2rem;
  font-weight: 600;
  text-transform: capitalize;
  color: var(--primary-dark);
  padding-bottom: 15px;
  border-bottom: 1px solid var(--secondary-dark);
}

.all-notes .note-list {
  margin-top: 20px;
}

.note-list .note{
  border-radius: 10px;
  padding: 10px;
  border: 1px solid var(--secondary-dark);
  margin-bottom: 10px;
  cursor: pointer;
  flex-direction: column;
  align-items: start;
  gap: 20px;
}




/* main section -- search */
main .search-section{
  /* background-color: red; */
  height: 100%;
  width: 100%;
}

.search-section .search-section-searchbar{
  padding: 10px;
  border: 1px solid lightgray;
  border-radius: 5px;
  gap: 5px;
}

.search-section-searchbar i{
  font-size: 1.2rem;
}
 
.search-section-searchbar input {
  height: 100%;
  width: 100%;
  border: 0;
  outline: 0;
  background: transparent;
  padding: 0px 5px;
  font-size: 1.1rem;
  color: var(--secondary-dark);
  border-bottom: 1px solid gray;
}

.search-section-searchbar:focus-within {
  border-color: grey;
}

.search-section .search-list{
  background-color: red;
  padding: 1rem 0px;
}

.search-list .search-item{
  border-radius: 10px;
  padding: 10px;
  border: 1px solid var(--secondary-dark);
  margin-bottom: 10px;
  cursor: pointer;
}

main .side-bar,
.note-editor {
  display: none;
  font-size: 40px;
  background-color: firebrick;
}


/* main section -- tags */
main .tags-section{ 
  height: 100%;
}

.tags-section p{
  text-transform: capitalize;
  font-size: 1.4rem;
  color: var(--primary-dark);
  font-weight: 500;
  padding-bottom: 20px;
}


.tag-list .tag-item{
  padding: 10px;
  transition: 0.6s;
}

.tag-list .tag-item:hover{
  background-color: var(--accent-light);
}

.tag-item i{
  color: var(--accent-color);
  font-size: 1.2rem;
}

.tag-item span{
  font-weight: 500;
  color: var(--secondary-dark);
  font-size: 1.2rem;
}

/* main section -- archived */
main .archived-notes{
  height: 100%;
}

.archived-notes p{
  text-transform: capitalize;
  font-size: 1.4rem;
  color: var(--primary-dark);
  font-weight: 500;
  padding-bottom: 20px;
}


.archived-notes .archived-note-list {
  margin-top: 20px;
}

.archived-note-list .archived-note {
  border-radius: 10px;
  padding: 10px;
  border: 1px solid var(--secondary-dark);
  margin-bottom: 10px;
  cursor: pointer;
  flex-direction: column;
  align-items: start;
  gap: 20px;
}
















/* bottom-nav section */
.bottom-nav {
  border-top: 1px solid var(--secondary-dark);
  width: 100%;
  padding: 1rem;
  height: 10vh;
  font-size: 40px;
  /* gap: 10px; */
}

.bottom-nav .nav-btn{
  flex-direction: column;
  gap: 5px;
  padding: 5px;
  cursor: pointer;
  border: 0;
  outline: 0;
  background: transparent;
  flex: 1;
  border-radius: 5px;
}

.bottom-nav .nav-btn:hover{
  background-color: var(--accent-light);
}

.bottom-nav .active-btn{
  background-color: var(--accent-light);
}

.nav-btn p{
  text-transform: capitalize;
  font-size: 0.9rem;
  font-weight: 600;
}

.nav-btn i{
  color: var(--accent-color);
  font-size: 1.4rem;
}



































@media screen and (min-width: 1024px) {
  /* header, main{
        
    } */

  main {
    display: flex;
    height: 90vh;
  }

  main .side-bar,
  .note-editor {
    display: flex;
  }

  .bottom-nav {
    display: none;
  }
}

